--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+html {
+    height: 100%;
+}
+
 body {
-    background-color: aqua;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to bottom, blue, red);
 }
 
 .RPSChoose {
@@ -9,4 +14,11 @@ body {
 
 .title {
     text-align: center;
+    border: 10px solid black;
+    border-radius: 100px;
+    background-color: black;
+}
+
+.header {
+    color: white;
 }
